--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <title>My Resume</title>
 </head>
 <body>
-  <img src="./asstets/images/Dipty_Profile.jpg" height="150" alt="Dipty Profile Photo">
+  <a href="./public/contact.html"><img src="./asstets/images/Dipty_Profile.jpg" height="150" alt="Dipty Profile Photo"></a>
+
   <h2>Summary</h2>
   <p>Lead Backend Engineer with around 11 Years of experience in IT Industry. Successfully contributed to the development and implementation of complex software solutions in the tele communication and finance sectors. Expertise in designing and implementing scalable and efficient application architectures, providing technical guidance to junior team members, and handling DevOps activities. Deep understanding of messaging systems such as JMS, RabbitMQ, and Kafka. Proven ability to communicate effectively, work collaboratively and handle market specifications</p>
   <h2>Education</h2>
