--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <title>My Resume</title>
 </head>
 <body>
+  <h1>Dipty Sahoo</h1>
   <a href="./public/contact.html"><img src="./asstets/images/Dipty_Profile.jpg" height="150" alt="Dipty Profile Photo"></a>
 
   <h2>Summary</h2>
   <p>Lead Backend Engineer with around 11 Years of experience in IT Industry. Successfully contributed to the development and implementation of complex software solutions in the tele communication and finance sectors. Expertise in designing and implementing scalable and efficient application architectures, providing technical guidance to junior team members, and handling DevOps activities. Deep understanding of messaging systems such as JMS, RabbitMQ, and Kafka. Proven ability to communicate effectively, work collaboratively and handle market specifications</p>
+  <hr />
   <h2>Education</h2>
   <p>
     <b>Master of Computer Applications</b><br/>
@@ -18,19 +20,54 @@
     Sambalpur University, Odisha <br/>
     Sept. 2005 - June 2008 <br />
   </p>
+  <hr/>
   <h2>Work experience</h2>
-  <p>
-    <b>IBM India Pvt. Ltd.| Application Architect</b> <br/>
-    Sept. 2021 - April 2024 | India<br/>
-  </p>
-  <p>
-    <b>ITC Infotech. | Lead Consultant</b> <br/>
-    August. 2019 - September 2021 | India<br/>
-  </p>
-  <p>
-    <b>Cognizant Technology Solution | Senior Associate</b> <br/>
-    February. 2013 - July 2019 | India<br/>
-  </p>
+  <ul>
+    <li><b>IBM India Pvt. Ltd.| Application Architect</b></li>
+    <p> Sept. 2021 - April 2024 | India<br/></p>
+    <ul>
+      <li>Worked as Backend lead developer in multiple Project under Telecommunication domain for client AT&T</li>
+      <li>Analyze the existing legacy code to understand its functionality and architecture</li>
+      <li>Develop a comprehensive migration plan, including timelines, resources, and milestones.</li>
+      <li>Design a scalable and maintainable web development using modern Java technologies, such as Java 17, spring mvc, restful Spring Boot microservices.</li>
+      <li>Ensure the new architecture aligns with best practices and organizational goals.</li>
+      <li>Rewrite legacy code in modern Java, ensuring improved performance, security, and readability.</li>
+      <li>Deep understanding microservice design Patterns and solutions</li>
+      <li>Conduct code reviews to ensure high-quality code and adherence to coding standards, maintain code using versioning tool like git.</li>
+      <li>Develop CI/CD pipelines to automate build, testing, and deployment processes.</li>
+      <li>Deploy the application to cloud platforms (e.g., Azure, AWS, GCP) and ensure smooth operation in the new environment</li><br />
+    </ul>  
+      <li><b>ITC Infotech. | Lead Consultant</b></li>
+      <p> February. 2013 - July 2019 | India<br/></p>
+    <ul>
+      <li>Contributed expertise to several prominent retail product and investment banks including Blackrock, Santander, and Finastra within the finance sector.</li>
+      <li>Worked in agile methodologies, understanding requirements through scrum calls.</li>
+      <li>Expertise in User Interface design enables me to create intuitive and visually appealing interfaces that enhance user satisfaction and engagement.</li>
+      <li>With strong analytical and problem-solving abilities, I can effectively diagnose complex issues and develop strategic solutions that align with organizational goals</li>
+      <li>By combining User Experience (UX) principles with cutting-edge User Interface Design, I deliver products that not only meet but exceed user expectations.</li>
+      <li>Created detailed technical documentation (TDD) for the new application architecture and codebase.</li>
+      <li>Trained team members and stakeholders on new technologies and processes introduced during the migration.</li>
+      <li>Identified potential risks and challenges in the migration process and developed mitigation strategies.</li>
+      <li>Ensured that the migration did not disrupt ongoing business operations.</li>
+      <li>Demonstrated proficiency in using MS Office, MS Excel, and PowerPoint for documentation and presentations.</li><br/>
+    </ul>
+    <li><b>Cognizant Technology Solution | Senior Associate</b></li>
+    <p> February. 2013 - July 2019 | India<br/></p>
+    <ul>
+      <li>Contributed to e-commerce and Payment domain projects with companies such as Huawei, Honor, PayPal and Paytm.</li>
+      <li>Conducted technical interviews to build a team collaboration and ensure the selection of competent candidates.</li>
+      <li>Consulting with client to understand the requirement and preparing design documents with an excellent teamwork.</li>
+      <li>Proficient in developing robust application using Java 8, with a strong understanding of Spring boot framework for building enterprise-grade application.</li>
+      <li>Proficient in using various IDEs like IntelliJ IDEA, Visual Studio Code, and Eclipse to enhance productivity.</li>
+      <li>Deep understanding of Java Message Service (JMS) for asynchronous communication between distributed components, ensuring reliable message delivery.</li>
+      <li>Familiarity with containerization technologies like Docker and orchestration tools like Kubernetes for deploying and managing microservices at scale.</li>
+      <li>Developed scalable applications using Scala and the Play Framework for enhanced performance and maintainability.</li>
+      <li>Demonstrated self-starter qualities by proactively identifying and solving complex problems.</li>
+    </ul>
+  </ul>
+
+  
+ 
   <h2>Skills </h2>
   <ul>
     <li>Java,Javascript,HTML,CSS</li>
