--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
  
   <h2>Skills </h2>
   <ul>
-    <li>Java,Javascript,HTML,CSS</li>
-    <li>Springboot,Spring MVC,Microservics</li>
-    <li>Kafka,Terraform,JPA</li>
-    <li>GCP,AWS(EC2,Lambda,ECS,EKS)</li>
-    <li>Azure DevOps,Docker,Kubernetes,Nginix</li>
-    <li>Amazon S3,MongoDB,MySQL,NoSQL</li>
-    <li>Maven,Splunk,Jenkin,GraphQL,JUnit</li>
+    <li>Java,Javascript,HTML,CSS :⭐️⭐️⭐️⭐️⭐️</li>
+    <li>Springboot,Spring MVC,Microservics :⭐️⭐️⭐️⭐️⭐️</li>
+    <li>Kafka,Terraform,JPA :⭐️⭐️⭐️⭐️⭐️</li>
+    <li>GCP,AWS(EC2,Lambda,ECS,EKS) : ⭐️⭐️⭐️⭐️⭐️</li>
+    <li>Azure DevOps,Docker,Kubernetes,Nginix : ⭐️⭐️⭐️⭐️⭐️</li>
+    <li>Amazon S3,MongoDB,MySQL,NoSQL :⭐️⭐️⭐️⭐️⭐️</li>
+    <li>Maven,Splunk,Jenkin,GraphQL,JUnit :⭐️⭐️⭐️⭐️⭐️</li>
   </ul>
   <h2>Certifications </h2>
   <ul>
